appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "Login"
    timeout: 30000

- tapOn: "Login"
- tapOn:
    id: "login-username-input"
- inputText: a001

- tapOn:
    id: "login-password-input"
- inputText: Ansh@1789
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Sign in and continue learning"

- tapOn:
    id: "login-submit-button"

- extendedWaitUntil:
    visible: "Student Dashboard"
    timeout: 30000

- tapOn:
    id: "dashboard-open-exams-button"

- extendedWaitUntil:
    visible: "Student Exams"
    timeout: 30000

- scrollUntilVisible:
    element:
      id: "exams-search-input"
    direction: DOWN

- tapOn:
    id: "exams-search-input"

- inputText: PW Android Visual Class7 Math+Science 45 1784808577646

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Sign in and continue learning"

- scrollUntilVisible:
    element:
      id: "exams-open-top-exam-button"
    direction: UP

- tapOn:
    id: "exams-open-top-exam-button"

- extendedWaitUntil:
    visible: "Exam Readiness"
    timeout: 30000

- assertVisible: "Start Attempt"
