appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "Login"
    timeout: 30000

- tapOn: "Login"
- tapOn:
    id: "login-username-input"
- inputText: a001

- tapOn:
    id: "login-password-input"
- inputText: Ansh@1789
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Sign in and continue learning"

- tapOn:
    id: "login-submit-button"

- extendedWaitUntil:
    visible: "Student Dashboard"
    timeout: 30000

- tapOn: "Open Exam"

- extendedWaitUntil:
    visible: "Exam Readiness"
    timeout: 30000

- assertVisible: "Start Attempt"
- assertVisible: "45"
